traefik/samples/2.2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: default
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: dockersamples/static-site
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: default
  labels:
    app: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: dockersamples/static-site
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: default
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: service2
  namespace: default
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    kubernetes.io/ingress.class: traefik-2.2
    traefik.ingress.kubernetes.io/service-weights: |
      service1: 50%
      service2: 50%
spec:
  rules:
    - host: ingress1.test.cn
      http:
        paths:
          - backend:
              serviceName: service1
              servicePort: 80
            path: /
          - backend:
              serviceName: service2
              servicePort: 80
            path: /
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  annotations:
    kubernetes.io/ingress.class: traefik-2.2
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simpleingressroute.test.cn`) && Headers(`Eason`, `yes`)
      kind: Rule
      services:
        - name: service1
          port: 80
          weight: 20
        - name: service2
          port: 80
          weight: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute-header-regexp
  annotations:
    kubernetes.io/ingress.class: traefik-2.2
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simpleingressroute.test.cn`) && HeadersRegexp(`Source`, `(Steven)+|(Eason)+`)
      kind: Rule
      services:
        - name: service1
          port: 80
          weight: 20
        - name: service2
          port: 80
          weight: 80
